kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-classifier-msvc-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc-classifier-msvc
  template:
    metadata:
      labels:
        app: doc-classifier-msvc
    spec:
      containers:
      - name: doc-classifier-micro-service
        image: 'registry.ng.bluemix.net/doc-classifier-micro-service/doc-classifier-micro-service:2018-05-16.0'
        resources:
          requests:
            memory: "512Mi"
            cpu: "0.25"
          limits:
            memory: "1024Mi"
            cpu: "0.75"
        ports:
        - containerPort: 8080
          name: doc-classifier-api
