kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: doc-classifier-msvc-ingress
spec:
  tls:
  - hosts:
    - doc-classifier-micro-service.withwatson-std-cluster.us-south.containers.mybluemix.net
    secretName: withwatson-std-cluster
  rules:
  - host: doc-classifier-micro-service.withwatson-std-cluster.us-south.containers.mybluemix.net
    http:
      paths:
      - path: /
        backend:
          serviceName: doc-classifier-msvc-port-service
          servicePort: 8080
